--- a/views/index.pug
+++ b/views/index.pug
@@ -13,18 +13,16 @@ html
           a.navbar-brand(href='/') Header Section
     // body section
     div.container-fluid
-      div.jumbotron Jumbotron
+      div.jumbotron !{jumbotron}
         div.sign-up Signup
-      div.proposition Proposition
+      div.proposition !{proposition}
       div.benefits
-        div.benefit Benefits 1
-        div.benefit Benefits 2
-        div.benefit Benefits 3
+        for benefit in benefits
+          div.benefit !{benefit}
       div.topics
-        div.topic Topics 1
-        div.topic Topics 2
-        div.topic Topics 3
-      div.call-to-action Call To Action
+        for topic in topics
+          div.topic !{topic}
+      div.call-to-action !{callToAction}
         div.sign-up Signup
     // footer section
     div.footer Footer section
